...
      onComment = onComment,
      contextualItems =
        buildList {
          if (imageAsset != null) {
            add(
              EditorContextMenuItem(
                label = "이미지 내려받기",
                icon = Lucide.Download,
                modifier = shareAnchor.modifier,
                onClick = {
                  val anchor = shareAnchor.value
                  editor.launchEffect {
                    downloadEditorImage(imageAsset.originalUrl, anchor, uriHandler, toast)
                  }
                },
              )
            )
...
