...
            onClick = onClick,
          )
        }
      }
      EditorCompactContextMenuIconItem(
        Lucide.ChevronRight,
        "메뉴 펼치기",
        pageAcceptsInput,
        onExpandMenu,
      )
    }
  }
}
...
